[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/images/iconsgear/workeroutfit.png" type="Texture" id=1]
[ext_resource path="res://assets/images/iconsitems/collar.png" type="Texture" id=2]
[ext_resource path="res://assets/images/raceshades/Human_F.png" type="Texture" id=3]
[ext_resource path="res://assets/images/traits/bowextradamage.png" type="Texture" id=4]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/Panels/panel_slavebody.png" type="Texture" id=5]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/panel_item.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/panel_item_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/panel_item_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/mask_inventory_gear.png" type="Texture" id=9]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainSmallBold.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/Textures_v2/MANSION/Craft/Buttons/button_craftchoose.png" type="Texture" id=11]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_all_hover.png" type="Texture" id=12]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_all.png" type="Texture" id=13]
[ext_resource path="res://assets/Textures_v2/Tattoo/icon_tattoo_hover.png" type="Texture" id=14]
[ext_resource path="res://assets/Textures_v2/Tattoo/icon_tattoo.png" type="Texture" id=16]
[ext_resource path="res://gui_modules/Inventory/Scripts/InventoryGearModule.gd" type="Script" id=18]
[ext_resource path="res://assets/Textures_v2/Tattoo/frame_tattoo.png" type="Texture" id=19]
[ext_resource path="res://assets/Textures_v2/Tattoo/frame_tattoo_pressed.png" type="Texture" id=21]
[ext_resource path="res://assets/Textures_v2/Tattoo/frame_tattoo_disabled.png" type="Texture" id=22]



[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 700, 1050 )

[node name="InventoryGearModule" type="Panel"]
light_mask = 0
margin_right = 705.0
margin_bottom = 1050.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodyMask" type="Light2D" parent="."]
light_mask = 2
position = Vector2( 345.568, 512.451 )
z_as_relative = false
texture = ExtResource( 9 )
mode = 3
range_item_cull_mask = 2

[node name="BodyImage" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 2
margin_left = -139.051
margin_top = 49.7558
margin_right = 860.949
margin_bottom = 1049.76
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventorySlots" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chest" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 295.568
margin_top = 377.451
margin_right = 395.568
margin_bottom = 477.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="InventorySlots/chest"]
show_behind_parent = true
light_mask = 0
margin_top = -0.546295
margin_right = 100.0
margin_bottom = 99.4537
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="underwear" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 295.568
margin_top = 562.451
margin_right = 395.568
margin_bottom = 662.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="InventorySlots/underwear"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="legs" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 295.568
margin_top = 812.451
margin_right = 395.568
margin_bottom = 912.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="InventorySlots/legs"]
show_behind_parent = true
light_mask = 0
margin_top = -1.22778
margin_right = 100.0
margin_bottom = 98.7722
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hands" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 55.5678
margin_top = 392.451
margin_right = 155.568
margin_bottom = 492.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="InventorySlots/hands"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rhand" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 55.5678
margin_top = 512.451
margin_right = 155.568
margin_bottom = 612.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="InventorySlots/rhand"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lhand" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 555.568
margin_top = 512.451
margin_right = 655.568
margin_bottom = 612.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="InventorySlots/lhand"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="neck" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 295.568
margin_top = 262.451
margin_right = 395.568
margin_bottom = 362.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="InventorySlots/neck"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="head" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 295.568
margin_top = 82.4508
margin_right = 395.568
margin_bottom = 182.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="InventorySlots/head"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ass" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 355.568
margin_top = 672.451
margin_right = 455.568
margin_bottom = 772.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="InventorySlots/ass"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crotch" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 245.568
margin_top = 672.451
margin_right = 345.568
margin_bottom = 772.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="InventorySlots/crotch"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tool" type="TextureButton" parent="InventorySlots"]
light_mask = 0
margin_left = 555.568
margin_top = 392.451
margin_right = 655.568
margin_bottom = 492.451
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="InventorySlots/tool"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buffscontainer" type="HBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0.823529 )
self_modulate = Color( 1, 1, 1, 0.823529 )
show_behind_parent = true
light_mask = 0
margin_left = 9.0
margin_top = 941.0
margin_right = 705.0
margin_bottom = 1046.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureRect" parent="buffscontainer"]
visible = false
show_behind_parent = true
margin_right = 100.0
margin_bottom = 105.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="buffscontainer/Button"]
margin_left = 52.5601
margin_top = 74.947
margin_right = 101.56
margin_bottom = 101.947
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "5"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="buffscontainer/Button"]
show_behind_parent = true
margin_left = -2.0
margin_top = -2.0
margin_right = 103.0
margin_bottom = 103.0
rect_min_size = Vector2( 105, 105 )
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TattooSlots" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="face" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 295.568
margin_top = 182.451
margin_right = 395.568
margin_bottom = 282.451
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/face"]
light_mask = 0
margin_left = 13.2292
margin_top = 12.2292
margin_right = 88.2292
margin_bottom = 87.2292
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="neck" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 295.568
margin_top = 315.046
margin_right = 395.568
margin_bottom = 415.046
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/neck"]
light_mask = 0
margin_left = 12.5992
margin_top = 12.0529
margin_right = 87.5992
margin_bottom = 87.0529
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arms" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 474.941
margin_top = 476.905
margin_right = 574.941
margin_bottom = 576.905
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/arms"]
light_mask = 0
margin_left = 12.5992
margin_top = 12.0529
margin_right = 87.5992
margin_bottom = 87.0529
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chest" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 295.568
margin_top = 476.905
margin_right = 395.568
margin_bottom = 576.905
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/chest"]
light_mask = 0
margin_left = 13.2292
margin_top = 12.0529
margin_right = 88.2292
margin_bottom = 87.0529
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crotch" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 351.082
margin_top = 772.451
margin_right = 451.082
margin_bottom = 872.451
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/crotch"]
light_mask = 0
margin_left = 12.2704
margin_top = 11.7241
margin_right = 87.2704
margin_bottom = 86.7241
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="waist" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 295.568
margin_top = 627.2
margin_right = 395.568
margin_bottom = 727.2
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/waist"]
light_mask = 0
margin_left = 13.2142
margin_top = 12.6679
margin_right = 88.2142
margin_bottom = 87.6679
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ass" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 245.568
margin_top = 771.905
margin_right = 345.568
margin_bottom = 871.905
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/ass"]
light_mask = 0
margin_left = 13.2143
margin_top = 12.6679
margin_right = 88.2143
margin_bottom = 87.6679
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="legs" type="TextureButton" parent="TattooSlots"]
light_mask = 0
margin_left = 295.568
margin_top = 912.451
margin_right = 395.568
margin_bottom = 1012.45
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="TattooSlots/legs"]
show_behind_parent = true
light_mask = 0
margin_left = 14.1581
margin_top = 12.6679
margin_right = 89.1581
margin_bottom = 87.6679
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TattooButton" type="TextureButton" parent="."]
visible = false
margin_left = 623.819
margin_top = 872.451
margin_right = 677.819
margin_bottom = 926.451
texture_normal = ExtResource( 16 )
texture_hover = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryButton" type="TextureButton" parent="."]
visible = false
margin_left = 623.819
margin_top = 872.451
margin_right = 677.819
margin_bottom = 926.451
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
